--- a/css/styles.css
+++ b/css/styles.css
@@ -3,18 +3,33 @@ body {
   padding: 0;
   font-family: 'Montserrat', sans-serif;
 }
-@media (max-width: 600px) {
+/*@media (max-width: 600px) {*/
   body {
     background: #fff;
   }
   section, header, footer {
-    padding: 15px;
+    padding: 15px 20px;
   }
   header {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;;
     align-items: center;
+    padding: 25px 50px;
+    margin-bottom: 25px;
+    /*position: relative;
+    height: 300px;*/
+    /*background-image: linear-gradient(#ff9d2f, #ff6126);*/
+
   }
+  .bg_header {
+    position: absolute;
+    top: 0;
+    z-index: -100;
+    width: 100%;
+    height: 250px;
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 50%);
+  }
+
   h1 {
     font-size: 44px;
     font-weight: 100;
@@ -22,61 +37,59 @@ body {
     margin: 0;
   }
   h2 {
-    font-size: 16px;
+    font-size: 18px;
     text-transform: uppercase;
     font-weight: 300;
-    color: #fff;
+    padding: 10px 30px 0 30px;
+  }
+  .head-principle {
+    align-self: flex-start;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    top: -300px;
   }
   .head-principle p {
     font-size: 13px;
     margin-top: 0;
-    margin-bottom: 30px;
-    /*position: relative;
-    height: 300px;
-  background-image: linear-gradient(#ff9d2f, #ff6126);*/
+    margin-bottom: 55px;
+    text-transform: uppercase;
   }
   .head-principle img {
     margin-bottom: 15px;
   }
-  .head-principle {
-    background-color: yellow;
-    align-self: self-start;
-  }
-  .head-principle p {
-    text-transform: uppercase;
-  }
-
   .screen1 {
-    width: 50%;
+    width: 175px;
+    margin-left: 20px;
+  }
+  .screen2 {
+    margin-left: 100px;
   }
   .question{
     background-color: #7245B2;
     color: #fff;
     text-align: center;
     text-transform: uppercase;
-
-    }
-    .arguments {
-      background-color: #fff;
-      display: flex;
-      align-items: center;
-    }
-    .arguments p {
-      color: #7245B2;
-      font-size: 18px;
-      font-weight: 200;
-    }
-    .arguments img {
-      margin:0 25px;
-    }
-    main {
-      padding-bottom: 125px;
-    }
-    .question {
-
-       transform: skewY(2.5deg)
-    }
-
+    height: 150px;
+    clip-path: polygon(0% 0%, 100% 0%, 100% 50%, 0% 100%);
+  }
+  .arguments {
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+  }
+  .arguments p {
+    color: #7245B2;
+    font-size: 18px;
+    font-weight: 200;
+  }
+  .arguments img {
+    margin:0 25px;
+  }
+  main {
+    padding-bottom: 125px;
+  }
   .button {
     display: block;
     background-color: #7245B2;
@@ -101,7 +114,6 @@ body {
     bottom: 0px;
     width: 100%;
     height: 60px;
-
   }
   .social {
     margin: auto;
@@ -112,10 +124,7 @@ body {
   .social img {
     margin: 0 15px
   }
-
   form {
     margin: 15px;
     padding: 5px;
   }
-
-}
