--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,8 @@ body {
   padding: 0;
   font-family: 'Montserrat', sans-serif;
 }
-/*@media (max-width: 600px) {*/
+
+
   body {
     background: #fff;
   }
@@ -27,6 +28,7 @@ body {
     z-index: -100;
     width: 100%;
     height: 250px;
+    -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 50%);
     clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 50%);
   }
 
@@ -72,6 +74,7 @@ body {
     text-align: center;
     text-transform: uppercase;
     height: 150px;
+    -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 50%, 0% 100%);
     clip-path: polygon(0% 0%, 100% 0%, 100% 50%, 0% 100%);
   }
   .arguments {
