--- a/css/styles.css
+++ b/css/styles.css
@@ -131,3 +131,8 @@ body {
     margin: 15px;
     padding: 5px;
   }
+  @media screen and (min-width: 600px) {
+    body {
+        background-color: red;
+    }
+}
