--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,17 @@ body {
     color: #7245B2;
     margin: 0;
   }
-  h2 {
+  header h2 {
+    font-size: 13px;
+    margin-top: 0;
+    margin-bottom: 55px;
+    text-transform: uppercase;
+    font-weight: 300;
+  }
+  header p {
+    display: none;
+  }
+  .question h2 {
     font-size: 18px;
     text-transform: uppercase;
     font-weight: 300;
@@ -52,12 +62,7 @@ body {
     align-items: flex-start;
     top: -300px;
   }
-  .head-principle p {
-    font-size: 13px;
-    margin-top: 0;
-    margin-bottom: 55px;
-    text-transform: uppercase;
-  }
+
   .head-principle img {
     margin-bottom: 15px;
   }
@@ -66,7 +71,8 @@ body {
     margin-left: 20px;
   }
   .screen2 {
-    margin-left: 100px;
+    padding: 0 0 0 20%;
+    width: 400px;
   }
   .question{
     background-color: #7245B2;
@@ -135,4 +141,16 @@ body {
     body {
         background-color: red;
     }
+    header p {
+      display: block;
+    }
+    .question h2 {
+      font-size: 26px;
+      padding: 10px 30px 0 30px;
+      text-align: left;
+    }
+    /*main {
+      display: flex;
+    }*/
+
 }
